# promptwars18

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  models.py
app/routes/: auth.py  carbon.py  chat.py  insights.py
app/security/: __init__.py  csrf.py  rate_limiter.py  sanitizer.py
app/services/: analytics.py  carbon_calculator.py  chat_service.py  gcs_service.py  http_client.py  insights_engine.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
tests/: conftest.py  test_analytics.py  test_auth.py  test_carbon.py  test_chat.py  test_chat_service.py  test_csrf.py  test_gcs.py  test_insights.py  test_main.py  test_models.py  test_sanitizer.py  test_security.py
